fix: replace Files.writeString with Java 8 compatible Files.write